[project]
name = "agentic-dog-walker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.9",
    "numpy>=2.3.3",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
